@@ -20,51 +20,46 @@ import java.beans.Introspector;
 import java.beans.PropertyDescriptor;
 import java.beans.PropertyEditor;
 import java.beans.PropertyEditorManager;
-import java.util.HashMap;
+import java.lang.reflect.InvocationTargetException;
 import java.util.LinkedHashMap;
 import java.util.Map;
-import java.util.ServiceLoader;
 
 import org.jproggy.snippetory.Encodings;
 import org.jproggy.snippetory.TemplateContext;
-import org.jproggy.snippetory.engine.spi.CaseFormatter;
-import org.jproggy.snippetory.engine.spi.CropFormatter;
-import org.jproggy.snippetory.engine.spi.DateFormatter;
-import org.jproggy.snippetory.engine.spi.DecimalFormatter;
-import org.jproggy.snippetory.engine.spi.DefaultFormatter;
-import org.jproggy.snippetory.engine.spi.IntFormatter;
-import org.jproggy.snippetory.engine.spi.NullFormatter;
-import org.jproggy.snippetory.engine.spi.NumFormatter;
-import org.jproggy.snippetory.engine.spi.PadFormatter;
-import org.jproggy.snippetory.engine.spi.ToggleFormatter;
-import org.jproggy.snippetory.spi.Configurer;
 import org.jproggy.snippetory.spi.DynamicAttributes;
 import org.jproggy.snippetory.spi.Encoding;
 import org.jproggy.snippetory.spi.FormatConfiguration;
+import org.jproggy.snippetory.spi.Link;
 
 public class Attributes {
   public static final String BACKWARD = "backward";
-  static final Registry REGISTRY = new Registry();
 
   public static Attributes parse(Location parent, Map<String, String> attribs, TemplateContext ctx) {
     Attributes result = new Attributes(parent, ctx);
     for (Map.Entry<String, String> attr : attribs.entrySet()) {
-      Types type = Attributes.REGISTRY.type(attr.getKey());
+      Types type = AttributesRegistry.INSTANCE.type(attr.getKey());
       type.handle(result, attr.getKey(), attr.getValue());
     }
     return result;
   }
 
-  Map<String, FormatConfiguration> formats = new LinkedHashMap<String, FormatConfiguration>();
+  Map<String, FormatConfiguration> formats = new LinkedHashMap<>();
+  Map<String, String> annotations = new LinkedHashMap<>();
   Encoding enc;
+  Link link;
+  String linkName;
   String delimiter;
   String prefix;
   String suffix;
-  private TemplateContext ctx;
+  private final TemplateContext ctx;
 
   Attributes(Location parent, TemplateContext ctx) {
     enc = parent == null ? Encodings.NULL : parent.md.enc;
     this.ctx = ctx;
+  }
+
+  public static void register(String name, Types type) {
+    AttributesRegistry.INSTANCE.register(name, type);
   }
 
   void unregisteredAttribute(String key, String value) {
@@ -78,45 +73,49 @@ public class Attributes {
   }
 
   private void subAttribute(String parent, String attrib, String value) {
-    FormatConfiguration format = formats.get(parent);
-    if (format == null) {
-      throw new SnippetoryException("Missing parent " + parent + " for sub-attribute " + attrib + "='" + value + '\'');
+    Object base = formats.get(parent);
+    if (base == null) {
+      if (!parent.equals(linkName)) {
+        throw new SnippetoryException("Missing parent " + parent + " for sub-attribute " + attrib + "='" + value + '\'');
+      }
+      base = link;
     }
     try {
-      BeanInfo desc = Introspector.getBeanInfo(format.getClass());
+      BeanInfo desc = Introspector.getBeanInfo(base.getClass());
       for (PropertyDescriptor prop : desc.getPropertyDescriptors()) {
         if (prop.getName().equals(attrib)) {
-          setProperty(format, prop, value);
+          setProperty(base, prop, value);
           return;
         }
       }
     } catch (IntrospectionException e) {
       throw new SnippetoryException(e);
     }
-    if (format instanceof DynamicAttributes) {
-      ((DynamicAttributes)format).setAttribute(attrib, value);
+    if (base instanceof DynamicAttributes) {
+      ((DynamicAttributes) base).setAttribute(attrib, value);
       return;
     }
     throw new SnippetoryException("Can't understand attribute " + parent + '.' + attrib + "='" + value + "'");
   }
 
-  private void setProperty(FormatConfiguration format, PropertyDescriptor prop, String value) {
+  private void setProperty(Object format, PropertyDescriptor prop, String value) {
     try {
       PropertyEditor editor = toEditor(prop);
       editor.setAsText(value);
       prop.getWriteMethod().invoke(format, editor.getValue());
-    } catch (RuntimeException e) {
-      throw e;
-    } catch (Exception e) {
+    } catch (InvocationTargetException | InstantiationException | IllegalAccessException e) {
       throw new SnippetoryException(e);
     }
   }
 
-  @SuppressWarnings("unchecked")
   private PropertyEditor toEditor(PropertyDescriptor prop) throws InstantiationException, IllegalAccessException {
     Class<?> editorType = prop.getPropertyEditorClass();
     if (editorType != null) {
-      return (PropertyEditor)editorType.newInstance();
+      try {
+        return (PropertyEditor) editorType.getConstructor().newInstance();
+      } catch (InvocationTargetException | NoSuchMethodException e) {
+        throw new SnippetoryException(e);
+      }
     }
     Class<?> type = prop.getPropertyType();
     if (Enum.class.isAssignableFrom(type)) {
@@ -131,6 +130,17 @@ public class Attributes {
       void handle(Attributes target, String key, String value) {
         FormatConfiguration format = FormatRegistry.INSTANCE.get(key, value, target.ctx);
         target.formats.put(key, format);
+      }
+    },
+    LINK {
+      @Override
+      void handle(Attributes target, String key, String value) {
+        Link link = LinkRegistry.INSTANCE.get(key, value, target.ctx);
+        if (target.link != null) {
+          throw new SnippetoryException("Only one link per node possible");
+        }
+        target.link = link;
+        target.linkName = key;
       }
     },
     ENCODING {
@@ -166,12 +176,19 @@ public class Attributes {
         throw new SnippetoryException("Internal error: BACKWARD is not expected here");
       }
     },
+    ANNOTATION {
+      @Override
+      void handle(Attributes target, String key, String value) {
+        target.annotations.put(key, value);
+      }
+    },
     UNREGISTERED {
       @Override
       void handle(Attributes target, String key, String value) {
         target.unregisteredAttribute(key, value);
       }
     };
+
     abstract void handle(Attributes target, String key, String value);
   }
 
@@ -179,48 +196,4 @@ public class Attributes {
     // noop -> just called to ensure initializer is called.
   }
 
-  static {
-    REGISTRY.register("enc", Types.ENCODING);
-    REGISTRY.register("delimiter", Types.DELIMITER);
-    REGISTRY.register("prefix", Types.PREFIX);
-    REGISTRY.register("suffix", Types.SUFFIX);
-    REGISTRY.register(BACKWARD, Types.BACKWARD);
-    FormatRegistry.INSTANCE.register("pad", new PadFormatter());
-    FormatRegistry.INSTANCE.register("crop", new CropFormatter());
-    FormatRegistry.INSTANCE.register("number", new NumFormatter());
-    FormatRegistry.INSTANCE.register("int", new IntFormatter());
-    FormatRegistry.INSTANCE.register("decimal", new DecimalFormatter());
-    FormatRegistry.INSTANCE.register("date", new DateFormatter());
-    FormatRegistry.INSTANCE.register("toggle", new ToggleFormatter());
-    FormatRegistry.INSTANCE.register("case", new CaseFormatter());
-    FormatRegistry.INSTANCE.register("default", new DefaultFormatter());
-    FormatRegistry.INSTANCE.register("null", new NullFormatter());
-    for (Encodings e : Encodings.values()) {
-      EncodingRegistry.INSTANCE.register(e);
-    }
-    for (Configurer c : ServiceLoader.load(Configurer.class)) {
-      // avoid optimize this loop, as iterating is necessary to load the classes
-      // i.e. to initialize the extensions
-      c.getClass();
-    }
-  }
-
-  public static class Registry {
-    private final Map<String, Types> attribs = new HashMap<String, Types>();
-
-    private Registry() {}
-
-    public void register(String name, Types value) {
-      Types old = attribs.get(name);
-      if (old != null && old != value) {
-        throw new SnippetoryException("attribute " + name + " already defined otherwise.");
-      }
-      attribs.put(name, value);
-    }
-
-    public Types type(String name) {
-      if (!attribs.containsKey(name)) return Types.UNREGISTERED;
-      return attribs.get(name);
-    }
-  }
 }
